[package]
name = "versio"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/fnichol/versio"
documentation = "https://github.com/fnichol/versio"
homepage = "https://github.com/fnichol/versio"
keywords = []
categories = []
description = """
"""

[dependencies]
chrono = "0.4.7"
failure = "0.1.5"
human-panic = "1.0.1"
log = "0.4.6"
semver = "0.9.0"
structopt = { version = "0.2.18", default-features = false, features = ["suggestions", "wrap_help"] }

[dev-dependencies]
assert_cmd = "0.11.1"
insta = "0.8.1"
predicates = "1.0.1"
